# jartic2geojson

./: .gitignore  .gitkeep  README.md  batch_convert.sh  convert_jartic.py  pyproject.toml  repair_geometries.py  requirements.txt  setup.py  tutorial.txt
jartic2geojson/: __init__.py  cli.py  config.py
jartic2geojson/core/: __init__.py  converter.py
jartic2geojson/postprocess/: __init__.py  core.py  file_processor.py  geometry_fixer.py  logging_utils.py  memory_manager.py  reporting.py
jartic2geojson/utils/: coordinate_utils.py  geometry_processor.py
utils/: __init__.py  column-detector.py  file-handler.py
