[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jartic2geojson"
version = "1.0.0"
description = "交通規制情報CSVファイルのGeoJSON変換およびジオメトリ修正ツール"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Satoshi IIDA", email = "nyampire@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=1.0.0",
    "geopandas>=0.9.0",
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "shapely>=1.7.0",
    "fiona>=1.8.0",
    "psutil>=5.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/jartic2geojson"
"Bug Reports" = "https://github.com/yourusername/jartic2geojson/issues"

[project.scripts]
jartic2geojson = "jartic2geojson.cli:main"
repair_geometries = "jartic2geojson.cli:repair_geometries_entry"
